Fix cover images in discography sticking out

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.75;
